# solana-vista

./: README.md
crates/vista-anchor/: Cargo.toml
crates/vista-anchor/src/: lib.rs
crates/vista-api/: Cargo.toml
crates/vista-api/src/: lib.rs
crates/vista-api/src/graphql/: mod.rs  mutations.rs  queries.rs  schema.rs  subscriptions.rs
crates/vista-core/: Cargo.toml
crates/vista-core/src/: config.rs  lib.rs  plugin_registry.rs  traits.rs
crates/vista-core/src/models/: account.rs  mod.rs  transaction.rs
crates/vista-core/src/traits/: ingestor.rs  rpc_provider.rs  storage.rs
crates/vista-ingestion/: Cargo.toml
crates/vista-ingestion/src/: error.rs  lib.rs  plugin_registry.rs  rpc.rs  traits.rs
crates/vista-ingestion/src/providers/: geyser.rs  mod.rs  quicknode.rs
crates/vista-ingestion/src/providers/geyser/: quicknode.rs
crates/vista-storage/: Cargo.toml
crates/vista-storage/migrations/: 2024092700001_create_accounts_table.sql
crates/vista-storage/src/: lib.rs  postgres.rs
plugins/vista-storage-postgres/: Cargo.toml
plugins/vista-storage-postgres/migrations/: 20230601000002_create_transactions_table.sql  20230601000003_create_parsed_accounts_table.sql  2024092700001_create_accounts_table.sql
plugins/vista-storage-postgres/src/: lib.rs
src/: main.rs
