[package]
name = "vista-api"
version = "0.1.0"
edition = "2021"

[dependencies]
vista-core = { path = "../vista-core" }
async-graphql = "5.0.7"
async-graphql-actix-web = "5.0.7"
actix-web = "4.3.1"
tokio = { version = "1.28", features = ["full"] }
futures = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"