[package]
name = "vista-core"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.16.0"
solana-transaction-status = "1.16.0"
solana-client = "1.16.0"
tokio = { version = "1.29.1", features = ["full"] }
thiserror = "1.0.43"
async-trait = "0.1.71"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.7"