[package]
name = "vista-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
vista-core = { path = "../vista-core" }
tokio = { version = "1.29.1", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
async-trait = "0.1.71"
thiserror = "1.0.43"
serde_json = "1.0.100"